--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "require-resolve-hook",
   "version": "1.0.0",
   "description": "Module to hook into the Node.js require and require.resolve function",
-  "author": "余聪 <yucong06@meituan.com>",
+  "author": "imcuttle <imcuttle@163.com>",
   "scripts": {
     "test": "npx jest",
     "preversion": "npm test",
@@ -34,7 +34,7 @@
     "__tests__"
   ],
   "keywords": [
-    "余聪",
+    "imcuttle",
     "require",
     "resolve",
     "hook",
@@ -43,7 +43,7 @@
   "main": "lib",
   "types": "types",
   "license": "MIT",
-  "repository": "余聪/require-resolve-hook",
+  "repository": "imcuttle/require-resolve-hook",
   "module": "es",
   "jest": {
     "transform": {
