--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ cache:
 # - npm install
 
 script:
-  - npm test -- --coverage
+  - npx nyc $(npm bin)/ava
 after_script:
   - npm install codecov --no-save
   - codecov --token=$CODECOV_TOKEN
