--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Module to hook into the Node.js require and require.resolve function",
   "author": "imcuttle <imcuttle@163.com>",
   "scripts": {
-    "test": "npx jest",
+    "test": "npx ava",
+    "test:watch": "npx ava --watch",
     "preversion": "npm test",
     "build": "npm run clean && run-p --print-label \"build:**\"",
     "dev": "TSC_OPTIONS=\"--watch\" npm run build",
@@ -15,6 +16,17 @@
     "prepare": "npm run build",
     "version": "npm run changelog",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
+  },
+  "ava": {
+    "files": [
+      "__tests__/**/*.test.ts"
+    ],
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ]
   },
   "husky": {
     "hooks": {
@@ -43,23 +55,6 @@
   "license": "MIT",
   "repository": "imcuttle/require-resolve-hook",
   "module": "es",
-  "jest": {
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest",
-      "^.+\\.jsx?$": "babel-jest"
-    },
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ],
-    "testMatch": [
-      "**/__test{s,}__/*.(spec|test).{t,j}s{x,}"
-    ]
-  },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
@@ -68,15 +63,15 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@types/jest": "^26.0.15",
+    "ava": "^3.13.0",
     "conventional-changelog-cli": "^2.1.0",
     "husky": "^4.3.0",
-    "jest": "^26.6.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.4.2",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
 }
